Reinicia o SPP com SDD e entrega a jornada HTTP (S0 e S1)
Spec, plano, contratos e tarefas em specs/; monolito modular com reserve,
merchant e coordinator isolados por fachadas e ArchUnit. POST /v1/payments
responde 202 e o orquestrador leva o pagamento a CONFIRMED ou FAILED.
Prompts de IA em docs/ai/.

Co-authored-by: Cursor <cursoragent@cursor.com>